[gd_scene load_steps=5 format=2]

[ext_resource path="res://Scenes/TileMap2.tscn" type="PackedScene" id=1]
[ext_resource path="res://Scripts/TestLevelComponent.gd" type="Script" id=2]
[ext_resource path="res://Scenes/TileMap.tscn" type="PackedScene" id=3]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 64, 64 )

[node name="TestLevelComponent" type="Node2D"]
script = ExtResource( 2 )

[node name="pos" type="Position2D" parent="."]
position = Vector2( 0, 136 )

[node name="DeleteTimer" type="Timer" parent="."]
wait_time = 2.0

[node name="Area2D" type="Area2D" parent="."]
position = Vector2( 8, -16 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2( -8, 76 )
shape = SubResource( 1 )

[node name="TileMap" parent="." instance=ExtResource( 3 )]

[node name="TileMap2" parent="." instance=ExtResource( 1 )]
cell_size = Vector2( 16, 16 )

[connection signal="timeout" from="DeleteTimer" to="." method="_on_DeleteTimer_timeout"]
[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_Area2D_body_exited"]
